# streamlit-examples

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  README.md  cspell-words.txt  cspell.config.yaml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.cmd  run.sh
.github/workflows/: check.yml
.streamlit/: config-prod.toml  config.toml  secrets-EXAMPLE.toml
scripts/: config_convert.py  install.sh  pytest.sh  run.sh  run_pytest.sh  update.sh
src/: app.py  app_azure_login_msal.py  app_charts.py  app_data_editor.py  app_db_con_limit.py  app_file_upload.py  app_localization.py  app_url_param.py  helper.py  helper_mem_logger.py
src/reports/: 01_Text_and_Layout.py  02_Selects.py  03_Charts.py  04_Tables.py  05_Data_Editor.py  11_File_Download.py  12_File_Upload.py  r00_Intro.py  r00_intro.py  r01_Text_and_Layout.py  r01_text.py  r02_Inputs.py  r02_Selects.py  r02_inputs.py  r03_Charts.py  r03_charts.py  r04_Tables.py  r04_tables.py  r05_Data_Editor.py  r05_data_editor.py  r11_File_Download.py  r11_file_download.py  r12_File_Upload.py  r12_file_upload.py
tests/: run_all_pages_test.py  test_run_all_pages.py
