[project]
name = "streamlit-examples"
version = "0.1.0"
description = "Torben's Streamlit Examples and Snippets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=5.2.0",
    "msal>=1.34.0",
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
