[project]
name = "streamlit-examples"
version = "0.1.0"
description = "Torben's Streamlit Examples and Snippets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=7.4.3",
    "msal>=1.36.0",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
